<resources>
    <string name="app_name">Симулятор Электрика-ЭСера</string>
    <string name="load_game">Продолжить</string>
    <string name="version">ver. 0.006</string>

    <string name="map1">Дом</string>
    <string name="map2">Промзона</string>
    <string name="map3">Центр</string>
    <string name="map4">Набережная</string>
    <string name="map5">Дачи</string>
    <string name="map6">Торговые ряды</string>
    <string name="map7">Городская свалка</string>

    <string name="home1">Поспать</string>
    <string name="home2">Почитать перед сном</string>
    <string name="home3">Перекусить</string>
    <string name="home4">Сходить в трактир</string>
    <string name="work1">Отработать смену на эл/станции</string>
    <string name="work2">Поискать шабашку</string>
    <string name="work3">Поискать работу (у богатых)</string>
    <string name="work4">Помочь бедноте</string>
    <string name="seafront1">Читать газету</string>
    <string name="seafront2">Наслаждаться видами</string>
    <string name="dacha1">Заселиться на день</string>
    <string name="dacha2">Прогулка на свежем воздухе</string>
    <string name="center1">Сходить в театр</string>
    <string name="center2">Сходить на площадь</string>
    <string name="go_library">Пойти в библиотеку</string>
    <string name="shop1">Update Clothes</string>
    <string name="shop2">Update Flat/other</string>

    <string name="relax5">Прогулка по лесу</string>
    <string name="narodnik">Народническая деят-ть</string>
    <string name="theatre">Сходить в Театр</string>
    <string name="square">Сходить на площадь</string>
    <string name="eat2">Приготовить обед</string>
    <string name="eat3">Посетить ресторан</string>
    <string name="eat4">Потратить много времени на готовку</string>
    <string name="relax3">Сходить в баню</string>
    <string name="smoke">Покурить</string>

    <!-- description -->
    <string name="description_home">Вы - электрик. Работа нелегкая, но вы довольны своим здесь могла быть ваша реклама, вам всегда хватало на хлеб, заработанный честным трудом.</string>
    <string name="description_main">Санкт-Петербург - столица Российской империи и крупнейший промышленный центр страны. В 1703 город основал Петр I, а в 1905 году город переполнен несправедливостью и злостью. После кровавого воскресенья начала загораться алая заря...</string>
    <string name="description_center">Исторический центр города заполнен довольными и сытыми лицами, иногда может показаться, что в РИ всё отлично, но отсюда просто не видно трущёб Нарвской и Невской застав...</string>
    <string name="description_dacha">На Карельском перешейке аренда дач обходится дешевле, поэтому пользуется спросом у среднего класса, но жизнь в простых деревянных домиках и избах не сравниться с поразительным изяществом и богатством Петергофских и Павловских дач...</string>
    <string name="description_seafront">Самые красивые и большие здания находятся вдоль набережных. Здесь есть возможность найти занятие на любой вкус.</string>
    <string name="description_shops">Чуть дальше по Садовой улице от Сенной площади расположен Никольский рынок. Здесь торгуют любыми товарами, а также является неофициальной биржей труда.</string>
    <string name="description_work">Южная часть Петербурга с промышленностью и бедным населением, нищета, нравы, отсутствие элементарных благ для существования, примерно такое описание стоит дать.</string>
    <string name="description_underground">Подполье</string>
    <string name="description_svalka">Городские трущобы, где живут нищие и прочий "цвет" общества.</string>

    <string name="clothes0">Лохмотья</string>
    <string name="clothes1">Обычная одежда</string>
    <string name="clothes2">Хороший костюм</string>
    <string name="clothes3">Отличный костюм</string>
    <string name="clothes4">Превосходное качество</string>
    <string name="flat0">Кровать в бараке</string>
    <string name="flat1">Дешевая съёмная комната</string>
    <string name="flat2">Хорошая съёмная комната</string>
    <string name="flat3">Дешевая съёмная квартира</string>
    <string name="flat4">Своя квартира</string>

    <string name="exit">Выход</string>
    <string name="create_new_player">Новая игра</string>
    <string name="settings">Настройки?Их_нет_LoL</string>
    <string name="gg_vp">gg_vp</string>
    <string name="go_to_map">Вернуться на карту</string>

    <string name="money">Деньги</string>
    <string name="relax">Бодрость</string>
    <string name="eat">Сытость</string>
    <string name="rep">Репутация</string>
    <string name="name">Имя</string>
    <string name="intellect">Интеллект</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Лонгклики -->
    <string name="work1_show">-10 Бод -7 Сыт +8 Ден</string>
    <string name="work2_show">-15 Бод -14 Сыт +13 Ден</string>
    <string name="work3_show">-35 Бод -8 Сыт +25 Ден</string>
    <string name="work4_show">-15 Бод -30 Сыт +3 Ден</string>
    <string name="relax1_show">+20 Бод -10 Сыт</string>
    <string name="relax2_show">+35 Бод -20 Сыт -15 Ден</string>
    <string name="relax3_show">+23 Бод +5 Сыт -10 Ден</string>
    <string name="relax4_show">+23 Бод +5 Сыт -10 Ден</string>
    <string name="relax5_show">+8 Бод -3 Сыт -4 Ден</string>
    <string name="eat1_show">-2 Бод +6 Сыт -4 Ден</string>
    <string name="eat2_show">-8 Бод +10 Сыт -7 Ден</string>
    <string name="eat3_show">-11 Бод +25 Сыт -10 Ден</string>
    <string name="eat4_show">-15 Бод +30 Сыт -15 Ден</string>
    <string name="read_paper_show">+4 Бод -6 Сыт -1 Ден</string>
    <string name="kek_show">+4 Бод -2 Сыт</string>
    <string name="smoke_show">+2 Бод -1 Сыт -1 Ден</string>
    <string name="go_library_show">-12 Бод -6 Сыт -1 Ден</string>
    <string name="narodnik_show">-35 Бод -15 Сыт -25 Ден</string>
    <string name="theatre_show">+7 Бод -3 Сыт -9 Ден</string>
    <string name="square_show">+2 Бод -2 Сыт</string>


</resources>
